Add Gradle dependency minor version extractor utility
Introduce `GradleVersionMinorExtractorTxt` to identify and suggest minor version updates for dependencies in a Gradle build file. It parses dependencies, queries the latest versions from Maven Central, and checks for compatible minor version upgrades.